fix icon not visible on mobile

--- a/src/components/TrackTable/TrackTable.module.scss
+++ b/src/components/TrackTable/TrackTable.module.scss
@@ -47,7 +47,7 @@
       }
 
       .colDuration {
-        width: 50px;
+        width: 60px;
       }
 
       .colRemove {
